k8s-configs/ai-api-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: api-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 8000
      targetPort: 8000
