k8s-configs/ai-worker-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: worker-service
spec:
  type: ClusterIP
  selector:
    component: worker
  ports:
    - port: 8001
      targetPort: 8000
